[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-omop2neo4j-lpg"
version = "0.2.0"
authors = [
    { name="Gowtham Rao", email="rao@ohdsi.org" }
]
description = "A Python package to orchestrate the migration of OMOP vocabulary tables from PostgreSQL to a Labeled Property Graph (LPG) in Neo4j."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
]
dependencies = [
    "neo4j",
    "pandas",
    "numpy",
    "click",
    "pydantic-settings",
    "python-dotenv"
]

[project.optional-dependencies]
test = [
    "pytest",
    "psycopg2-binary",
    "pytest-docker"
]

[project.scripts]
py-omop2neo4j-lpg = "omop2neo4j_lpg.cli:cli"

[project.urls]
"Homepage" = "https://github.com/ohdsi/py-omop2neo4j-lpg"
"Bug Tracker" = "https://github.com/ohdsi/py-omop2neo4j-lpg/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
env_files = [
    ".env.test"
]
